+ patch #1821619 [privileges] Extra back reference when editing table-specific
  privileges, thanks to Herman van Rink - helmo
+ patch #2356575 [display] Sortable database columns,
  thanks to Bryce Thornton - brycethornton
- patch #2486825 [lang] Wrong string in setup script hints,
  thanks to Isaac Bennetch - ibennetch
- patch #2498350 [cleanup] XHTML cleanup, thanks to Virsacer - virsacer 

3.1.3.0 (not yet released)
+ [lang] Turkish update, thanks to Burak Yavuz
- patch #2496403 [display] Multi-row change with "]",
  thanks to Virsacer - virsacer

3.1.2.0 (not yet released)
- bug #1253252 [display] Can't NULL a column with relation defined 
- bug #2009500 [SQL] Small improvements in generated SQL (partial fix)
- bug #1963184 [export] YAML export improvement,
 thanks to Bryce Thornton - brycethornton
+ [lang] Dutch update, thanks to Herman van Rink - helmo 
- patch #2407785 [cleanup] ereg*() deprecated in PHP 5.3,
  thanks to Alex Frase - atfrase
- bug #2417058 [properties] Edit fields: losing auto-increment setting
- patch #2444082 [changelog] changelog.php linkifies one link wrong,
  thanks to Robert Xiao - nneonneo
- bug #2363653 [properties] Various problems with table structure
- bug [display] BIT field contents disappear when edited
+ [lang] Czech update, thanks to Ondřej Vadinský.
- bug #2461735 [operations] Table operations adds "row_format"
- bug #2445213 [export] Commas for CSV Excel 2008 for Mac
- bug #2397877 [core] ForceSSL and http auth_type
- bug #2473127 [display] Deleting rows displays tbl structure, not contents
- patch #2478940 [core] PHP 5.2+ warning does not work, 
  thanks to Jürgen Wind - windkiel
- bug #2416418 [privileges] Escaping special characters 

3.1.1.0 (2008-12-09)
- patch #2242765 [core] Navi panel server links wrong,
  thanks to Martin Stricker - martinstricker
- bug #2186823 [core] bad session.save_path not detected 
- bug #2202709 [core] Re-login causes PMA to forget current table name