@@ -1986,7 +1986,8 @@ setfacl -d -m "g:www-data:rwx" tmp
 
     <dt id="cfg_InitialSlidersState">$cfg['InitialSlidersState'] string</dt>
     <dd>If set to <tt>'closed'</tt>, the visual sliders are initially in a
-    closed state. A value of 'open' does the reverse.</dd>
+    closed state. A value of <tt>'open'</tt> does the reverse. To completely 
+    disable all visual sliders, use <tt>'disabled'</tt>.</dd>
 
     <dt id="cfg_TitleTable">$cfg['TitleTable'] string</dt>
     <dt id="cfg_TitleDatabase">$cfg['TitleDatabase'] string</dt>
