@@ -19,6 +19,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #2486825 [lang] Wrong string in setup script hints,
   thanks to Isaac Bennetch - ibennetch
 - patch #2498350 [cleanup] XHTML cleanup, thanks to Virsacer - virsacer 
++ patch #2494192 [display] Possibility of disabling the sliders, 
+  thanks to Virsacer - virsacer 
 
 3.1.3.0 (not yet released)
 + [lang] Turkish update, thanks to Burak Yavuz
